--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.2.1"
+actix-web = "4.3.1"
+serde = {version = "1.0.163", features = ["derive"] }
+serde_json = "1"
+futures = "0.3"
