--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ actix-web = "4.3.1"
 serde = {version = "1.0.163", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
+dotenv = "0.15.0"
+tokio-postgres = "0.7.8"
+tokio = "1.28.2"
